--- a/main.html
+++ b/main.html
@@ -8,6 +8,38 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+		<form>
+    <div>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" placeholder="Name" required>
+    </div>
+    <div>
+      <label for="phone">Phone Number:</label>
+      <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
+    </div>
+    <div>
+      <label for="address">Address:</label>
+      <textarea id="address" name="address" placeholder="Address" rows="4" required></textarea>
+    </div>
+    <div class="checkbox-group">
+      <input type="checkbox" id="lived_with_dog" name="lived_with_dog" value="Have you ever lived with a Dog before?">
+      <label for="lived_with_dog">Have you ever lived with a Dog before?</label>
+    </div>
+    <div>
+      <label for="preferred_breeds">Please select your preferred breeds:</label>
+      <select id="preferred_breeds" name="preferred_breeds" multiple required>
+        <option value="Labrador Retriever">Labrador Retriever</option>
+        <option value="German Shepherd">German Shepherd</option>
+        <option value="Golden Retriever">Golden Retriever</option>
+        <option value="Pug">Pug</option>
+        <option value="Beagle">Beagle</option>
+        <option value="French Bulldog">French Bulldog</option>
+      </select>
+    </div>
+    <div>
+      <input type="submit" value="Submit">
+    </div>
+  </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
