--- a/main.html
+++ b/main.html
@@ -9,29 +9,29 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<form method="post">
+		
+    <label for="name">Name*:</label>
+    <input type="text" id="name" name="name" placeholder="Name" required><br><br>
 
-		<label for="name">Name:</label>
-		<input type="text" id="name" name="name" placeholder="Name" required /><br /><br />
+    <label for="phone">Phone Number*:</label>
+    <input type="text" id="phone" name="phone" placeholder="Phone Number" required><br><br>
 
-		<label for="phone">Phone Number:</label>
-		<input type="text" id="phone" name="phone" placeholder="Phone Number" required /><br /><br />
+    <label for="address">Address*:</label>
+    <input type="text" id="address" name="address" placeholder="Address" required><br><br>
 
-		<label for="address">Address:</label>
-		<input type="text" id="address" name="address" placeholder="Address" required /><br /><br />
+    <label for="checkbox">Have you ever lived with a Dog before?*</label>
+    <input type="checkbox" id="checkbox" name="dog_experience" value="Have you ever lived with a Dog before?" required><br><br>
 
-		<input type="checkbox" id="lived_with_dog" name="lived_with_dog" 
-			value="Have you ever lived with a Dog before?" placeholder="Have you ever lived with a Dog before?" />
-		<label for="lived_with_dog">Have you ever lived with a Dog before?</label><br /><br />
+    <label for="multiSelect">Please select your preferred breeds*:</label>
+    <select id="multiSelect" name="preferred_breeds" multiple required>
+      <option value="labrador">Labrador</option>
+      <option value="beagle">Beagle</option>
+      <option value="germanshepherd">German Shepherd</option>
+    </select><br><br>
 
-		<label for="multiSelect">Please select your preferred breeds:</label><br />
-		<select id="multiSelect" name="preferred_breeds" multiple required>
-			<option value="labrador">Labrador</option>
-			<option value="germanshepherd">German Shepherd</option>
-			<option value="goldenretriever">Golden Retriever</option>
-		</select><br /><br />
+    <input type="submit" id="submit" value="Submit">
+  </form>
 
-		<input type="submit" value="Submit" />
-	</form>
 
     <script type="text/javascript" src="./script.js">
 </script>
